model refactored
